<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="activities.CaesarLvlActivity"
    tools:showIn="@layout/activity_caesar_lvl"
    android:id="@+id/main">

    <TextView
        android:id="@+id/InstructionText"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/caesar_lvl1_instr" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/cipher_circle_back"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true" />

        <ui_elements.CipherWheelView
            android:id="@+id/cipher_wheel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/KeyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/zero_key"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/CipherText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="90dp"
            android:gravity="center"
            android:text="@string/cipher_text"
            android:textSize="12sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:rotation="55"/>

        <TextView
            android:id="@+id/PlainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="220dp"
            android:gravity="center"
            android:text="@string/plain_text"
            android:textSize="12sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:rotation="55"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/message_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/TargetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_encryption_message"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:background="@drawable/letter_background"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/solution_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/AnswerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="_ _ _ _ _ _ _"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/SuccessMessage"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:layout_margin="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/SuccessText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stage_win_message"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/CompleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_word"/>

    </LinearLayout>
    <TableLayout
        android:id="@+id/KeyboardTable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:layout_margin="10dp"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:id="@+id/LetterBtn1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="T"
                android:id="@+id/LetterBtn2" />

            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="H"
                android:id="@+id/LetterBtn3" />

            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="L"
                android:id="@+id/LetterBtn4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="Z"
                android:id="@+id/LetterBtn5" />

            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="P"
                android:id="@+id/LetterBtn6" />

            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="N"
                android:id="@+id/LetterBtn7" />

            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="S"
                android:id="@+id/LetterBtn8" />
        </TableRow>
    </TableLayout>

</LinearLayout>
